--- a/Vikings/index.html
+++ b/Vikings/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/jquery.fancybox.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap"
       rel="stylesheet"
@@ -19,9 +19,12 @@
   <body>
     <header class="header">
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">1 сезон</a>
+            <a class="menu__list-link" href="seasons-1.html">1 сезон</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">2 сезон</a>
@@ -109,22 +112,134 @@
     <section class="seanons section-page">
       <div class="container">
         <h3 class="title">Все сезоны</h3>
-          <ol class="seasons__inner">
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-            <li class="seasons__item"><a class="seasons__link" href="#">Смотреть</a></li>
-          </ol>
+        <ol class="seasons__inner">
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-01.jpg)"
+          >
+            <a class="seasons__link" href="seasons-1.html">Смотреть</a>
+          </li>
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-02.jpg)"
+          >
+            <a class="seasons__link" href="#">Смотреть</a>
+          </li>
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-03.jpg)"
+          >
+            <a class="seasons__link" href="#">Смотреть</a>
+          </li>
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-04.jpg)"
+          >
+            <a class="seasons__link" href="#">Смотреть</a>
+          </li>
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-05.jpg)"
+          >
+            <a class="seasons__link" href="#">Смотреть</a>
+          </li>
+          <li
+            class="seasons__item"
+            style="background-image: url(./images/seasons-01.jpg)"
+          >
+            <a class="seasons__link" href="#">Смотреть</a>
+          </li>
+        </ol>
+      </div>
+    </section>
+
+    <section class="heroes section-page">
+      <div class="container">
+        <h3 class="title">Главные герои</h3>
+        <div class="heroes__inner">
+          <div class="heroes__slider-img">
+            <img
+              class="heroes__logo"
+              src="./images/heroes-logo1.jpg"
+              alt="heroes-logo1"
+            />
+            <img
+              class="heroes__logo"
+              src="./images/heroes-logo2.jpg"
+              alt="heroes-logo2"
+            />
+            <img
+              class="heroes__logo"
+              src="./images/heroes-logo3.jpg"
+              alt="heroes-logo3"
+            />
+          </div>
+          <div class="heroes__slider-text">
+            <div class="heroes__text">
+              <h4 class="heroes__name">Рагнар</h4>
+              <p>
+                Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный
+                скандинавский конунг из рода Инглингов, ключевой персонаж
+                сериала.
+              </p>
+
+              <p>
+                Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей
+                своей жизни следует пути викинга. Рассекая море в поисках боевой
+                славы и наживы, он стремится обрести новые знания, открыть
+                неизвестные земли и изменить нелегкую судьбу своего народа,
+                живущего в суровых условиях Скандинавского полуострова
+              </p>
+            </div>
+            <div class="heroes__text">
+              <h4 class="heroes__name">Лагерта</h4>
+              <p>
+                Лаге́рта (др.-сканд. Hlaðgerðr) - известная скандинавская
+                воительница первая жена датского морского конунга Рагнара
+                Лодброка.
+              </p>
+
+              <p>
+                В сериале Лагерта активно участвует в походах викингов,
+                колонизации ими новых земель и междоусобных распрях
+                скандинавских вождей.Эта отважная и независимая женщина способна
+                проявлять железную решимость, когда дело касается ее личного
+                достоинства, семьи или власти. Лагерта также известна своим
+                милосердием и благородством.
+              </p>
+            </div>
+            <div class="heroes__text">
+              <h4 class="heroes__name">Флоки</h4>
+              <p>
+                Флóки (др.-сканд. Flóki) - скандинавский кораблестроитель,
+                активно участвующий в грабительских набегах викингов на страны
+                Европы. Близкий друг и соратник Рагнара Лодброка.
+              </p>
+
+              <p>
+                Эксцентричный и чудаковатый, он живет в уединенном доме в лесу,
+                работая в своей мастерской на берегу моря. Отстранившись от войн
+                и политики, он открывает остров, позже получивший название
+                Исландия и ставший важной скандинавской колонией, а в дальнейшем
+                - независимым государством.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
+    <footer class="footer">
+      <div class="container">
+        <p class="copy">
+          Сериал «Викинги». Правами на сериал владеет канал History.
+        </p>
+      </div>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/jQuery.scrollSpeed.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
