coldx design update

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>COLDX DEV</title>
-    <link rel="icon" href="images/fav.ico" type="image/x-icon" />
+    <title>COLDX PAGE</title>
+    <link rel="icon" href="images/favicon1.ico" type="image/x-icon" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="logo" />
+      <img class="header__logo" src="./images/logo.png" alt="logo" />
       <div class="header__inner">
         <h1 class="header__title">Projects:</h1>
         <ul class="header__list">
@@ -35,8 +36,7 @@
       <div class="footer-copy">
         <ul>
           <li>COLDX © 2020</li>
-          <li><a href="#"></a>Privacy & Legal</li>
-          <li><a href="#"></a>Contact</li>
+          <li class="footer__text">Если не сегодня то когда.</li>
         </ul>
       </div>
     </footer>
