--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     />
     <title>COLDX PAGE</title>
     <link rel="icon" href="images/favicon1.ico" type="image/x-icon" />
-    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="./images/logo.png" alt="logo" />
+      <img class="header__logo" src="./images/logo.svg" alt="logo" />
       <div class="header__inner">
         <h1 class="header__title">Projects:</h1>
         <ul class="header__list">
