--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li class="header__item">
             <a class="header__link" href="/Vikings">vikings</a>
           </li>
+           <li class="header__item">
+            <a class="header__link" href="/seo">seo-page</a>
+          </li>
         </ul>
       </div>
     </header>
