--- a/seo-page/index.html
+++ b/seo-page/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEO page</title>
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -19,6 +19,7 @@
     <header class="header">
       <div class="header__top">
         <nav class="menu__list">
+          <button class="menu__list-btn"><span></span></button>
           <ul class="menu__list-items">
             <li class="menu__list-item"><a href="#">PRICING</a></li>
             <li class="menu__list-item"><a href="#">SUPPORT</a></li>
@@ -38,104 +39,113 @@
           cleaning or a personal trainer we let you compare and book top local
           business - Completely free.
         </div>
-        <a class="header__btn" href="#">EXPLORE OUR SERVICES</a>
+        <a class="header__btn page-btn" href="#">EXPLORE OUR SERVICES</a>
       </div>
     </header>
 
-    <!-- <section class="services">
-      <div class="container">
-        <ul class="services__items">
-          <li class="services__item">
-            <div class="services_images-img">
-              <img src="./images/services-logo1.svg" alt="services-logo1" />
-            </div>
-            <div class="services__item-title">1. Choose a Service</div>
-            <div class="services__item-text page-text">
-              Find anything youre looking for. Home cleaning, laundry, or a
-              fitness trainer. Save time - get more done.
-            </div>
-          </li>
-          <li class="services__item">
-            <div class="services_images-img">
-              <img src="./images/services-logo2.svg" alt="services-logo1" />
-            </div>
-            <div class="services__item-title">2. Compare Businesses</div>
-            <div class="services__item-text page-text">
-              Find the provider fits you best. Never settle with the top 10% of
-              local business. No fly-by-night providers.
-            </div>
-          </li>
-          <li class="services__item">
-            <div class="services_images-img">
-              <img src="./images/guide-logo3.svg" alt="services-logo1" />
-            </div>
-            <div class="services__item-title">3. Book your provider</div>
-            <div class="services__item-text page-text">
-              Easy payments with simple booking. Never leave the SwiftBook
-              platform.Book same day or for the future.
-            </div>
-          </li>
-        </ul>
-      </div>
+    <section class="services">
+      <ul class="services__items">
+        <li class="services__item">
+          <div class="services__images">
+            <img src="./images/services-logo1.svg" alt="services-logo1" />
+          </div>
+          <div class="services__item-title">1. Choose a Service</div>
+          <div class="services__item-text page-text">
+            Find anything youre looking for. Home cleaning, laundry, <br />
+            or a fitness trainer. <br />
+            Save time - get more done.
+          </div>
+        </li>
+        <li class="services__item">
+          <div class="services__images">
+            <img src="./images/services-logo2.svg" alt="services-logo1" />
+          </div>
+          <div class="services__item-title">2. Compare Businesses</div>
+          <div class="services__item-text page-text">
+            Find the provider fits you <br />
+            best. <br />
+            Never settle with the top 10% of local business. No fly-by-night
+            providers.
+          </div>
+        </li>
+        <li class="services__item">
+          <div class="services__images">
+            <img src="./images/services-logo3.svg" alt="services-logo3" />
+          </div>
+          <div class="services__item-title">3. Book your provider</div>
+          <div class="services__item-text page-text">
+            Easy payments with simple <br />
+            booking.<br />
+            Never leave the SwiftBook platform.Book same day or for the future.
+          </div>
+        </li>
+      </ul>
     </section>
 
     <section class="advantages">
       <div class="advantages__box">
-        <div class="advantages__title page-title">Link pyromids robust and reliable</div>
-        <div class="advantages__text page-text">
-          <p>Porta etiam dolor sit amet, consectetur adipiscing elit.</p>
-          <p>
-            Consequat eu congue morbi sem augue amet. Id imperdiet diam quis
-            tempor rhoncus, ipsum placerat aliquam massa. Luctus porttitor massa
-            amet nunc, sollicitudin. Erat amet faucibus adipiscing ut sed massa
-            convallis vitae.
-          </p>
-          <p>
-            Eu sit placerat nunc adipiscing. Laoreet amet commodo nunc, morbi
-            urna ornare. Leo laoreet dignissim massa elementum nullam sem
-            pellentesque feugiat in.
-          </p>
-          <p>
-            Lectus dolor pharetra tortor viverra netus eget mi in in. Quis
-            consequat velit a vestibulum. Porta etiam odio sit at. At adipiscing
-            posuere rhoncus non vivamus lobortis sed.
-          </p>
+        <div class="advantages__info">
+          <div class="advantages__title advantages-ico1 page-title">
+            Link pyromids robust and reliable
+          </div>
+          <div class="advantages__text page-text">
+            <p>Porta etiam dolor sit amet, consectetur adipiscing elit.</p>
+            <p>
+              Consequat eu congue morbi sem augue amet. Id imperdiet diam quis
+              tempor rhoncus, ipsum placerat aliquam massa. Luctus porttitor
+              massa amet nunc, sollicitudin. Erat amet faucibus adipiscing ut
+              sed massa convallis vitae.
+            </p>
+            <p>
+              Eu sit placerat nunc adipiscing. Laoreet amet commodo nunc, morbi
+              urna ornare. Leo laoreet dignissim massa elementum nullam sem
+              pellentesque feugiat in.
+            </p>
+            <p>
+              Lectus dolor pharetra tortor viverra netus eget mi in in. Quis
+              consequat velit a vestibulum. Porta etiam odio sit at. At
+              adipiscing posuere rhoncus non vivamus lobortis sed.
+            </p>
+          </div>
+
+          <a class="advantages__link" href="#">Learn More About our Process</a>
         </div>
-        <a class="advantages__link" href="#">Learn More About our Process</a>
-        <div class="advantages__dashboard">
-          <img src="./images/dashboard-01.png" alt="dashboard-01" />
+        <div class="advantages__images">
+          <img src="./images/dashboard-1.png" alt="dashboard-1" />
         </div>
       </div>
-      <div class="advantages__box">
-        <div class="advantages__title page-title">Link pyromids robust and reliable</div>
-        <div class="advantages__text page-text">
-          <p>Porta etiam dolor sit amet, consectetur adipiscing elit.</p>
-          <p>
-            Consequat eu congue morbi sem augue amet. Id imperdiet diam quis
-            tempor rhoncus, ipsum placerat aliquam massa. Luctus porttitor massa
-            amet nunc, sollicitudin. Erat amet faucibus adipiscing ut sed massa
-            convallis vitae.
-          </p>
-          <p>
-            Eu sit placerat nunc adipiscing. Laoreet amet commodo nunc, morbi
-            urna ornare. Leo laoreet dignissim massa elementum nullam sem
-            pellentesque feugiat in.
-          </p>
-          <p>
-            Lectus dolor pharetra tortor viverra netus eget mi in in. Quis
-            consequat velit a vestibulum. Porta etiam odio sit at. At adipiscing
-            posuere rhoncus non vivamus lobortis sed.
-          </p>
+
+      <div class="advantages__box advantages__box--right">
+        <div class="advantages__info">
+          <div class="advantages__title advantages-ico2 page-title">
+            Wide scope deeper understanding
+          </div>
+          <div class="advantages__text page-text">
+            <p>Consectetur adipiscing elit.</p>
+            <p>
+              Tellus luctus sed habitasse quis ipsum massa cursus et. Fringilla
+              tincidunt amet, viverra a elit imperdiet bibendum leo. Auctor
+              rutrum maecenas ut risus integer velit dictum massa amet.
+            </p>
+            <p>
+              Sed vestibulum urna pulvinar ultricies turpis hendrerit
+              scelerisque quam. Bibendum ac viverra porttitor magna. Neque, ut
+              lacus, aliquam pretium volutpat porttitor mauris neque.
+            </p>
+            <p>Quis a sed id duis cras tellus mauris pharetra.</p>
+          </div>
+          <a class="advantages__link" href="#">Companies weve transformed</a>
         </div>
-        <a class="advantages__link" href="#">Learn More About our Process</a>
-        <div class="advantages__dashboard--left">
-          <img src="./images/dashboard-02.png" alt="dashboard-01" />
+        <div class="advantages__images">
+          <img src="./images/dashboard-2.png" alt="dashboard-2" />
         </div>
       </div>
     </section>
 
     <section class="clients">
-      <div class="clients__title page-title">Weve helped over 600 clients achieve</div>
+      <div class="clients__title page-title">
+        Weve helped over 600 clients achieve
+      </div>
       <div class="clients__images">
         <img src="./images/clients.png" alt="clients" />
       </div>
@@ -146,22 +156,22 @@
           alt="clients-brends1"
         />
         <img
-          class="clients__image"
+          class="clients__image brends-ico2"
           src="./images/clients-brends2.png"
           alt="clients-brends2"
         />
         <img
-          class="clients__image"
+          class="clients__image brends-ico3"
           src="./images/clients-brends3.png"
           alt="clients-brends3"
         />
         <img
-          class="clients__image"
+          class="clients__image brends-ico4"
           src="./images/clients-brends4.png"
           alt="clients-brends4"
         />
         <img
-          class="clients__image"
+          class="clients__image brends-ico5"
           src="./images/clients-brends5.png"
           alt="clients-brends5"
         />
@@ -169,22 +179,21 @@
     </section>
 
     <section class="payments">
-      <div class="container">
-        <div class="payments__title page-title">
-          Not satisfied? No payment necessary.
-        </div>
-        <div class="payments__subtitle page-subtitle">
-          We let you test our complete suite of features - with zero zero risk.
-        </div>
-        <div class="payments__text">
-          60 Day SERP rist guarantee. Receive a full refund if we dont perform.
-        </div>
-        <a class="payments__btn page-btn" href="#">TRY OUR SERVICE</a>
+      <div class="payments__title page-title">
+        Not satisfied? No payment necessary.
       </div>
+      <div class="payments__subtitle page-subtitle">
+        We let you test our complete suite of features - with zero zero risk.
+      </div>
+      <div class="payments__text">
+        60 Day SERP rist guarantee. <br />
+        Receive a full refund if we dont perform. <br />
+      </div>
+      <a class="payments__btn page-btn" href="#">TRY OUR SERVICE</a>
     </section>
 
     <section class="booking">
-      <div class="container">
+      <div class="booking__content">
         <div class="booking__title page-title">
           Your first booking - with a discount
         </div>
@@ -196,42 +205,44 @@
     </section>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer__top">
         <nav class="footer-menu">
           <ul class="footer-list">
             <li class="footer-list__item">
-              <div class="footer-list__title">COMPANY</div>
-              <a class="footer-list__link" href="#">ABOUT</a>
-              <a class="footer-list__link" href="#">CONTACT</a>
-              <a class="footer-list__link" href="#">PRESS</a>
-              <a class="footer-list__link" href="#">TEAM</a>
-              <a class="footer-list__link" href="#">BLOG</a>
+              <div class="footer-list__title footer-title1">COMPANY</div>
+              <a class="footer-list__link footer-link1" href="#">ABOUT</a>
+              <a class="footer-list__link footer-link1" href="#">CONTACT</a>
+              <a class="footer-list__link footer-link1" href="#">PRESS</a>
+              <a class="footer-list__link footer-link1" href="#">TEAM</a>
+              <a class="footer-list__link footer-link1" href="#">BLOG</a>
             </li>
             <li class="footer-list__item">
-              <div class="footer-list__title">CUSTOMERS</div>
-              <a class="footer-list__link" href="#">SERVICES</a>
-              <a class="footer-list__link" href="#">MY ACCOUNT</a>
-              <a class="footer-list__link" href="#">SUPPORT</a>
-              <a class="footer-list__link" href="#">FAQ</a>
+              <div class="footer-list__title footer-title2">CUSTOMERS</div>
+              <a class="footer-list__link footer-link2" href="#">SERVICES</a>
+              <a class="footer-list__link footer-link2" href="#">MY ACCOUNT</a>
+              <a class="footer-list__link footer-link2" href="#">SUPPORT</a>
+              <a class="footer-list__link footer-link2" href="#">FAQ</a>
             </li>
             <li class="footer-list__item">
-              <div class="footer-list__title">PROVIDERS</div>
-              <a class="footer-list__link" href="#">SERVICES</a>
-              <a class="footer-list__link" href="#">CASE STUDIES</a>
-              <a class="footer-list__link" href="#">SUPPORT</a>
-              <a class="footer-list__link" href="#">FAQ</a>
+              <div class="footer-list__title footer-title3">PROVIDERS</div>
+              <a class="footer-list__link footer-link3" href="#">SERVICES</a>
+              <a class="footer-list__link footer-link3" href="#"
+                >CASE STUDIES</a
+              >
+              <a class="footer-list__link footer-link3" href="#">SUPPORT</a>
+              <a class="footer-list__link footer-link3" href="#">FAQ</a>
             </li>
             <li class="footer-list__item">
               <div class="footer-list__title">RECENT BLOG</div>
               <div class="footer-list__content">
-                <div class="footer-list__title">UX Design</div>
+                <div class="footer-list__subtitle">UX Design</div>
                 <div class="footer-list__text">
                   Lorem ipsum is simply dumy texts is widely used in the design.
                   <a class="footer-list__text-link" href="#">Read More</a>
                 </div>
               </div>
               <div class="footer-list__content">
-                <div class="footer-list__title">UX Design</div>
+                <div class="footer-list__subtitle">UX Design</div>
                 <div class="footer-list__text">
                   Lorem ipsum is simply dumy texts is widely used in the...
                   <a class="footer-list__text-link" href="#">Read More</a>
@@ -239,15 +250,36 @@
               </div>
             </li>
             <li class="footer-list__item">
-              <div class="footer-list__title">CUSTOMERS</div>
-              <a class="footer-list__link" href="#">Facebook</a>
-              <a class="footer-list__link" href="#">Twitter</a>
-              <a class="footer-list__link" href="#">Instagram</a>
-              <a class="footer-list__link" href="#">LinkedIn</a>
+              <div class="footer-list__title footer-title4">CUSTOMERS</div>
+              <a
+                class="footer-list__link footer-link4 footer-ico footer-ico1"
+                href="#"
+                >Facebook</a
+              >
+              <a
+                class="footer-list__link footer-link4 footer-ico footer-ico2"
+                href="#"
+                >Twitter</a
+              >
+              <a
+                class="footer-list__link footer-link4 footer-ico footer-ico3"
+                href="#"
+                >Instagram</a
+              >
+              <a
+                class="footer-list__link footer-link4 footer-ico footer-ico4"
+                href="#"
+                >LinkedIn</a
+              >
             </li>
           </ul>
         </nav>
       </div>
-    </footer> -->
+      <div class="footer__info">
+        <a class="footer__text" href="https://t.me/reallyc0ldx">BY COLDX</a>
+      </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
