--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="header__link" href="/Vikings">vikings</a>
           </li>
            <li class="header__item">
-            <a class="header__link" href="/seo">seo-page</a>
+            <a class="header__link" href="/seo-page">seo-page</a>
           </li>
         </ul>
       </div>
