--- a/seo-page/index.html
+++ b/seo-page/index.html
@@ -280,6 +280,6 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="seo-page/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
