--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
            <li class="header__item">
             <a class="header__link" href="/seo-page">seo-page</a>
           </li>
+            <li class="header__item">
+            <a class="header__link" href="/artistic">artistic</a>
+          </li>
         </ul>
       </div>
     </header>
