--- a/artistic/index.html
+++ b/artistic/index.html
@@ -14,7 +14,7 @@
         <div class="header__inner" style="background: rgba(208, 177, 148, 0.6);">
             <div class="header__top">
                 <a class="logo" href="#">
-                    <img src="/images/logo.svg" alt="header__logo">
+                    <img src="./images/logo.svg" alt="header__logo">
                     <div class="logo__text">
                         <div class="logo__title">artistic</div>
                         <div class="logo__subtitle">Ремонт ванных комнат</div>
