--- a/artistic/index.html
+++ b/artistic/index.html
@@ -26,10 +26,10 @@
                     <ul class="menu__list">
                         <li class="menu__item"><a class="menu__item-link" href="#">Главная</a></li>
                         <li class="menu__item"><a class="menu__item-link" href="#prices">Цены</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/calculator.html">Калькулятор
+                        <li class="menu__item"><a class="menu__item-link" href="./calculator.html">Калькулятор
                                 ремонта</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/works.html">Примеры работ</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/contacts.html">Контакты</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./works.html">Примеры работ</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./contacts.html">Контакты</a></li>
                         <li class="menu__item"><a class="menu__item-link" href="#reviews">Отзывы</a></li>
                     </ul>
                 </nav>
