--- a/artistic/contacts.html
+++ b/artistic/contacts.html
@@ -14,7 +14,7 @@
         <div class="header__inner">
             <div class="header__top">
                 <a class="logo" href="/">
-                    <img src="/images/logo.svg" alt="header__logo">
+                    <img src="./images/logo.svg" alt="header__logo">
                     <div class="logo__text">
                         <div class="logo__title">artistic</div>
                         <div class="logo__subtitle">Ремонт ванных комнат</div>
@@ -23,12 +23,12 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item"><a class="menu__item-link" href="/">Главная</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/#prices">Цены</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/calculator.html">Калькулятор
+                        <li class="menu__item"><a class="menu__item-link" href="./#prices">Цены</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./calculator.html">Калькулятор
                                 ремонта</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/works.html">Примеры работ</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/contacts.html">Контакты</a></li>
-                        <li class="menu__item"><a class="menu__item-link" href="/#reviews">Отзывы</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./works.html">Примеры работ</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./contacts.html">Контакты</a></li>
+                        <li class="menu__item"><a class="menu__item-link" href="./#reviews">Отзывы</a></li>
                     </ul>
                 </nav>
                 <a class="phone" href="tel:+78123030300">+7(812) 30 - 30 - 300</a>
