--- a/artistic/index.html
+++ b/artistic/index.html
@@ -86,7 +86,7 @@
 
     <section class="form section-styles">
         <div class="form__img">
-            <img src="/images/form-img.jpg" alt="form-img">
+            <img src="./images/form-img.jpg" alt="form-img">
         </div>
         <div class="container">
             <h3 class="form__title section-title">Расчитайте стоимость ремонта санузла быстро
