--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
         <h1 class="header__title">Projects:</h1>
         <ul class="header__list">
           <li class="header__item">
-            <a class="header__link" href="/tesla">tesla</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="/martaup">martaup</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="/batman">batman</a>
-          </li>
-          <li class="header__item">
             <a class="header__link" href="/Vikings">vikings</a>
           </li>
            <li class="header__item">
@@ -40,7 +31,7 @@
     <footer class="footer">
       <div class="footer-copy">
         <ul>
-          <li>COLDX © 2020</li>
+          <li>COLDX © 2020 <coldxdev@gmail.com/></li>
           <li class="footer__text">Если не сегодня то когда.</li>
         </ul>
       </div>
