--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <footer class="footer">
       <div class="footer-copy">
         <ul>
-          <li>COLDX © 2020 <coldxdev@gmail.com/></li>
-          <li class="footer__text">Если не сегодня то когда.</li>
+          <li>COLDX © 2020 <a href="mailto:coldxdev@gmail.com"><coldxdev@gmail.com/></a></li>
+          <li class="footer__text"><a href="https://t.me/coldxdev">Telegram</a></li>
         </ul>
       </div>
     </footer>
