--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <footer class="footer">
       <div class="footer-copy">
         <ul>
-          <li>COLDX © 2020 <a href="mailto:coldxdev@gmail.com"><coldxdev@gmail.com/></a></li>
-          <li class="footer__text"><a href="https://t.me/coldxdev">Telegram</a></li>
+          <li>COLDX © 2020></li>
+           <li><a class="footer__link" href="mailto:coldxdev@gmail.com">coldxdev@gmail.com</a></li>
+          <li class="footer__text"><a class="footer__link" href="https://t.me/coldxdev">Telegram</a></li>
         </ul>
       </div>
     </footer>
