--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <footer class="footer">
       <div class="footer-copy">
         <ul>
-          <li class="footer__text">COLDX © 2020></li>
+          <li class="footer__text">COLDX © 2020</li>
            <li class="footer__text"><a class="footer__link" href="mailto:coldxdev@gmail.com">coldxdev@gmail.com</a></li>
           <li class="footer__text"><a class="footer__link" href="https://t.me/coldxdev">Telegram</a></li>
         </ul>
