some fix and redesign

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +7,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet" />
   <title>COLDX PAGE</title>
-  <link rel="icon" href="images/favicon1.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -24,10 +25,12 @@
       </ul>
     </div>
   </header>
+
+
   <footer class="footer">
     <div class="footer-copy">
-      <ul>
-        <li class="footer__text">COLDX © 2020</li>
+      <ul class="footer__list">
+        <li class="footer__text">COLDX © 2021</li>
         <li class="footer__text"><a class="footer__link" href="mailto:coldxdev@gmail.com">coldxdev@gmail.com</a></li>
         <li class="footer__text"><a class="footer__link" href="https://t.me/coldxdev">Telegram</a></li>
       </ul>
