--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li class="header__item">
           <a class="header__link" href="https://coldxdev.github.io/quiz-js">Quiz</a>
         </li>
+        <li class="header__item">
+          <a class="header__link" href="https://coldxdev.github.io/desire">Desire</a>
+        </li>
       </ul>
     </div>
   </header>
